including proc to proceedings

--- a/Docs/IJES/journal.tex
+++ b/Docs/IJES/journal.tex
@@ -712,7 +712,7 @@ Finally, there is an issue about $150$ nodes problem, since it seems to be the l
 \begin{thebibliography}{10}
 
 \bibitem[\protect\citeauthoryear{Arato et al.}{2003}]{Arato2003}
-Arato, P., Juhasz, S., Mann, A., Orban, A. and Papp, D. (2003) 'Hardware/software partitioning in embedded system design', {\it Intl. Symp. on Intelligent Signal Processing}, pp.192--202
+Arato, P., Juhasz, S., Mann, A., Orban, A. and Papp, D. (2003) 'Hardware/software partitioning in embedded system design', {\it International Symposium on Intelligent Signal Processing}, pp.192--202
 
 \bibitem[\protect\citeauthoryear{Mann \textit{et al.}}{2007}]{Mann2007}
 Mann, A., Orban, A. and Arato, P. (2007) 'Finding optimal hardware/software partitions', {\it Formal Methods in System Design}, Vol. 31, No. 3, pp.241--263
@@ -721,13 +721,13 @@ Mann, A., Orban, A. and Arato, P. (2007) 'Finding optimal hardware/software part
 Trindade, A. and Cordeiro, L. (2015) 'Applying SMT-based verification to hardware/software partitioning in embedded systems', {\it Design Automation for Embedded Systems (to appear)}
 
 \bibitem[\protect\citeauthoryear{Trindade \textit{et al.}}{2016}]{Trindade2016}
-Trindade, A., Ismail, H. and Cordeiro, L. (2016) 'Applying Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper)', {\it V Brazilian Symp. on Computing Systems Engineering (to appear)}
+Trindade, A., Ismail, H. and Cordeiro, L. (2016) 'Applying Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper)', {\it V Brazilian Symposium on Computing Systems Engineering (to appear)}
 
 \bibitem[\protect\citeauthoryear{Bjorner \textit{et al.}}{2015}]{Bjorner2015}
-Bjorner, N., Phan, A. and Fleckenstein, L. (2015) 'vZ - An Optimizing SMT Solver', {\it Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems}, Vol. 9035, pp.194--199
+Bjorner, N., Phan, A. and Fleckenstein, L. (2015) 'vZ - An Optimizing SMT Solver', {\it Proceedings of the International Conference on Tools and Algorithms for the Construction and Analysis of Systems}, Vol. 9035, pp.194--199
 
 \bibitem[\protect\citeauthoryear{Tang \textit{et al.}}{2010}]{Tang2009}
-Tang, T., Lin, Y. and Ren, X. (2010) 'Mapping OpenMP concepts to the stream programming model', {\it Proc. of the Intl. Conf. on Computer Science Education}, pp.1900--1905
+Tang, T., Lin, Y. and Ren, X. (2010) 'Mapping OpenMP concepts to the stream programming model', {\it Proceedings of the International Conference on Computer Science Education}, pp.1900--1905
 
 \bibitem[\protect\citeauthoryear{Muller}{2002}]{OpenMP1998}
 Muller, M. (2002) 'OpenMP Architecture Review Board, OpenMP C and C++ Application Program Interface, Version 2.0', {\it OpenMP Architecture Review Board}
@@ -745,41 +745,41 @@ Biere, A., Heule, M., Maaren, H. and Walsh, T. {2009} 'Bounded Model Checking', 
 Clarke, E., Biere, A., Raimi, R. and Zhu, Y. (2001) 'Bounded model checking using satisfiability solving', {\it Formal Methods in System Design}, Vol. 19, No. 1, pp.7--34
 
 \bibitem[\protect\citeauthoryear{Armando \textit{et al.}}{2009}]{Armando2009}
-Armando, A., Mantovani, J. and Platania, L. (2009) 'Bounded model checking of software using SMT solvers instead of SAT solvers', {\it Intl. Journal on Software Tools for Technology Transfer}, Vol. 11, No. 1, pp.69--83
+Armando, A., Mantovani, J. and Platania, L. (2009) 'Bounded model checking of software using SMT solvers instead of SAT solvers', {\it International Journal on Software Tools for Technology Transfer}, Vol. 11, No. 1, pp.69--83
 
 \bibitem[\protect\citeauthoryear{Ganai and Gupta}{2006}]{Ganai2006}
-Ganai, M. K. and Gupta, A. (2006) 'Accelerating high-level bounded model checking', {\it Proc. of the IEEE/ACM Intl. Conf. on Computer-Aided Design}, pp.794--801
+Ganai, M. K. and Gupta, A. (2006) 'Accelerating high-level bounded model checking', {\it Proceedings of the IEEE/ACM International Conference on Computer-Aided Design}, pp.794--801
 
 \bibitem[\protect\citeauthoryear{Ramalho \textit{et al.}}{2013}]{Ramalho2013}
-Ramalho, M., Freitas, M., Sousa, F., Marques, H., Cordeiro, L. and Fischer, B. (2013) 'SMT-Based Bounded Model Checking of C++ Programs', {\it Intl. Conf. and Workshops on the Engineering of Computer-Based Systems}, pp.147--156
+Ramalho, M., Freitas, M., Sousa, F., Marques, H., Cordeiro, L. and Fischer, B. (2013) 'SMT-Based Bounded Model Checking of C++ Programs', {\it International Conference and Workshops on the Engineering of Computer-Based Systems}, pp.147--156
 
 \bibitem[\protect\citeauthoryear{Moura and Bjorner}{2008}]{DeMoura2008}
-Moura, L. and Bjorner, N. (2008) 'Z3: An Efficient SMT Solver', {\it Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems}, pp.337--340
+Moura, L. and Bjorner, N. (2008) 'Z3: An Efficient SMT Solver', {\it Proceedings of the International Conference on Tools and Algorithms for the Construction and Analysis of Systems}, pp.337--340
 
 \bibitem[\protect\citeauthoryear{Brummayer and Biere}{2009}]{Brummayer2009}
-Brummayer, R. and Biere, A. (2009) 'Boolector: An Efficient SMT Solver for Bit-Vectors and Arrays', {\it Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems}, Vol. 5505, pp.174--177
+Brummayer, R. and Biere, A. (2009) 'Boolector: An Efficient SMT Solver for Bit-Vectors and Arrays', {\it Proceedings of the International Conference on Tools and Algorithms for the Construction and Analysis of Systems}, Vol. 5505, pp.174--177
 
 \bibitem[\protect\citeauthoryear{Barrett \textit{et al.}}{2011}]{Barrett2011}
-Barrett, C., Conway, C., Deters, M., Hadarean, L., Jovanovic, D., King, T., Reynolds, A. and Tinelli, C. (2011) 'CVC4', {\it Proc. of the Intl. Conf. on Computer-Aided Verification}, Vol. 6806, pp.171--177
+Barrett, C., Conway, C., Deters, M., Hadarean, L., Jovanovic, D., King, T., Reynolds, A. and Tinelli, C. (2011) 'CVC4', {\it Proceedings of the International Conference on Computer-Aided Verification}, Vol. 6806, pp.171--177
 
 \bibitem[\protect\citeauthoryear{Bozzano \textit{et al.}}{2005}]{Bozzano2005}
 Bozzano, M., Bruttomesso, R., Cimatti, A., Junttila, T., Rossum, P., Schulz, S. and Sebastiani, R. (2005) 'MathSAT: Tight integration of SAT and mathematical decision procedures', {\it Journal of Automated Reasoning}, Vol. 35, No. 1-3, pp.265--293
 
 \bibitem[\protect\citeauthoryear{Dutertre}{2014}]{Dutertre2014}
-Dutertre, B. (2014) 'Yices 2.2', {\it Proc. of the Intl. Conf. on Computer-Aided Verification}, Vol. 8559, pp.737--744
+Dutertre, B. (2014) 'Yices 2.2', {\it Proceedings of the International Conference on Computer-Aided Verification}, Vol. 8559, pp.737--744
 
 \bibitem[\protect\citeauthoryear{Wu \textit{et al.}}{2014}]{Wu2014}
-Wu M., Wu, W., Tai, N., Zhao, H., Fan, J. and Yuan, N. (2014) 'Research on OpenMP model of the parallel programming technology for homogeneous multicore DSP', {\it Proc. of the Intl. Conf. on Software Engineering and Service Science}, pp.921--924
+Wu M., Wu, W., Tai, N., Zhao, H., Fan, J. and Yuan, N. (2014) 'Research on OpenMP model of the parallel programming technology for homogeneous multicore DSP', {\it Proceedings of the International Conference on Software Engineering and Service Science}, pp.921--924
 
 \bibitem[\protect\citeauthoryear{Bjorner and Phan}{2014}]{Bjorner2014}
-Bjorner, N. and Phan, A (2014) 'vZ - Maximal Satisfaction with Z3', {\it Proc. of the Intl. Symp. on Symbolic Computation in Software Science}, pp.1--10
+Bjorner, N. and Phan, A (2014) 'vZ - Maximal Satisfaction with Z3', {\it Proceedings of the International Symposium on Symbolic Computation in Software Science}, pp.1--10
 
 
 \bibitem[\protect\citeauthoryear{Paci et al}{2008}]{Federica2008}
-Paci, F., Ferrini, R., Sun, Y. and Bertino, E. (2008) 'Authorization and User Failure Resiliency for WS-BPEL business processes', {\it Proc. of the Intl. Conf. on Service-Oriented Computing}, pp.116--131
+Paci, F., Ferrini, R., Sun, Y. and Bertino, E. (2008) 'Authorization and User Failure Resiliency for WS-BPEL business processes', {\it Proceedings of the International Conference on Service-Oriented Computing}, pp.116--131
 
 \bibitem[\protect\citeauthoryear{Narodytska and Bacchus}{2014}]{NarodytskaN}
-Narodytska, N. and Bacchus, F. (2014) 'Maximum Satisfiability Using Core-Guided MAXSAT Resolution', {\it Proc. of the Conf. on Artificial Intelligence}, pp.2717--2723
+Narodytska, N. and Bacchus, F. (2014) 'Maximum Satisfiability Using Core-Guided MAXSAT Resolution', {\it Proceedings of the Conference on Artificial Intelligence}, pp.2717--2723
 
 \bibitem[\protect\citeauthoryear{Barth and Putnam}{1995}]{Barth1995}
 Barth, P. and Putnam, D. (1995) 'Enumeration Algorithm for Linear Pseudo-Boolean Optimization', {\it Technical Report MPI-I-95-2-003, Max Plank Institute for Computer Science}
@@ -788,31 +788,31 @@ Barth, P. and Putnam, D. (1995) 'Enumeration Algorithm for Linear Pseudo-Boolean
 Manquinho, V. and Marques-Silva, J. (1995) 'Effective Lower Bounding Techniques for Pseudo-Boolean Optimization', {\it IST/INESC-ID, Technical University of Lisbon, Portugal}
 
 \bibitem[\protect\citeauthoryear{Microsoft Research}{2015}]{Z3API}
-Microsoft Research (2015) 'Z3 API - Source code and documentation', {\it https://z3.codeplex.com/}, Accessed in 18th August 2015
+Microsoft Research (2015) 'Z3 API - Source code and documentation' [online] {\it https://z3.codeplex.com/} (Accessed 18 August 2015)
 
 \bibitem[\protect\citeauthoryear{Cormen \textit{et al.}}{2009}]{Cormem}
 Cormen, T., Leiserson, C., Rivest, R. and Stein, C. (2009) 'Introduction to Algorithms', {\it MIT Press}, Vol. I-XIX, pp.1--1292
 
 \bibitem[\protect\citeauthoryear{Dagum and Menon}{1998}]{Dagum1998}
-Dagum, L. and Menon, R. (1998) 'OpenMP: An Industry-Standard API for Shared-Memory Programming', {\it Proc. of the Intl. Conf. on Computational Science Engineering}, pp.46--55
+Dagum, L. and Menon, R. (1998) 'OpenMP: An Industry-Standard API for Shared-Memory Programming', {\it Proceedings of the International Conference on Computational Science Engineering}, pp.46--55
 
 \bibitem[\protect\citeauthoryear{MathWorks}{2013}]{TheMathWorks2013}
-MathWorks (2013) 'MATLAB (version R2013a)'
+MathWorks Inc. (2013) 'MATLAB (version R2013a)'
 
 \bibitem[\protect\citeauthoryear{Tranquillo}{2011}]{Tranquillo2011}
 Tranquillo, J. (2011) 'Matlab for Engineering and the Life Sciences', {\it Synthesis Lectures on Engineering. Morgan Claypool}
 
 \bibitem[\protect\citeauthoryear{Hong and Cai}{2010}]{Hong2010}
-Hong, L. and Cai, J. (2010) 'The application guide of mixed programming between MATLAB and other programming languages', {\it Proc. of the Intl. Conf. on Computer and Automation Engineering}, pp.185--189
+Hong, L. and Cai, J. (2010) 'The application guide of mixed programming between MATLAB and other programming languages', {\it Proceedings of the International Conference on Computer and Automation Engineering}, pp.185--189
 
 \bibitem[\protect\citeauthoryear{Cordeiro and Fischer}{2011}]{Cordeiro2011}
-Cordeiro, L. and Fischer, B. (2011) 'Verifying multi-threaded software using SMT-based context-bounded model checking', {\it Proc. of the Intl. Conf. on Software Engineering}, pp.331--340
+Cordeiro, L. and Fischer, B. (2011) 'Verifying multi-threaded software using SMT-based context-bounded model checking', {\it Proceedings of the International Conference on Software Engineering}, pp.331--340
 
 \bibitem[\protect\citeauthoryear{Teich}{2012}]{Teich2012}
-Teich, J. (2012) 'Hardware/Software Codesign: The Past, the Present, and Predicting the Future', {\it Proc. of the IEEE, Special Centennial Issue}, Vol. 100, pp.1411--1430
+Teich, J. (2012) 'Hardware/Software Codesign: The Past, the Present, and Predicting the Future', {\it Proceedings of the IEEE, Special Centennial Issue}, Vol. 100, pp.1411--1430
 
 \bibitem[\protect\citeauthoryear{Guthaus \textit{et al.}}{2011}]{Guthaus2001}
-Guthaus, M., Ringenberg, J., Ernst, D., Austin, T., Mudge, T. and Brown, R. (2011) 'MiBench: A free, commercially representative embedded benchmark suite', {\it Proc. of the annual workshop on workload characterization}, pp.3--14
+Guthaus, M., Ringenberg, J., Ernst, D., Austin, T., Mudge, T. and Brown, R. (2011) 'MiBench: A free, commercially representative embedded benchmark suite', {\it Proceedings of the annual workshop on workload characterization}, pp.3--14
 
 \bibitem[\protect\citeauthoryear{Arato \textit{et al.}}{2005}]{Arato2005}
 Arato, P., Mann, A., Orban, A. (2005) 'Algorithmic aspects of hardware/software partitioning', {\it ACM Transactions on Design Automation of Electronic Systems}, Vol. 1, No. 1, pp.136--156
@@ -821,22 +821,22 @@ Arato, P., Mann, A., Orban, A. (2005) 'Algorithmic aspects of hardware/software 
 Holzmann, G., Joshi, R. and Groce, A. (2011) 'Swarm Verification Techniques', {\it IEEE Transactions on Software Engineering}, Vol. 37, No. 6, pp.845--857
 
 \bibitem[\protect\citeauthoryear{Wintersteiger \textit{et al.}}{2009}]{Wintersteiger2009}
-Wintersteiger, C., Hamadi, Y. and Moura, L. (2009) 'A Concurrent Portfolio Approach to SMT Solving', {\it Proc. of the Intl. Conf. on Computer-Aided Verification}, Vol. 5643, pp.715--720
+Wintersteiger, C., Hamadi, Y. and Moura, L. (2009) 'A Concurrent Portfolio Approach to SMT Solving', {\it Proceedings of the International Conference on Computer-Aided Verification}, Vol. 5643, pp.715--720
 
 \bibitem[\protect\citeauthoryear{Qawasmeh \textit{et al.}}{2014}]{Qawasmeh2014}
-Qawasmeh, A., Malik, A. and Chapman, B. (2014) 'OpenMP task scheduling analysis via OpenMP runtime API and tool visualization', {\it Proc. of the Intl. Symp. on Parallel Distributed processing}, pp.1049--1058
+Qawasmeh, A., Malik, A. and Chapman, B. (2014) 'OpenMP task scheduling analysis via OpenMP runtime API and tool visualization', {\it Proceedings of the International Symposium on Parallel Distributed processing}, pp.1049--1058
 
 \bibitem[\protect\citeauthoryear{Pavlinovi \textit{et al.}}{2015}]{Pavlinovic2015}
-Pavlinovi, Z., King, T. and Wies, T. (2015) 'Practical SMT-Based Type Error Localization', {\it Proc. of the Intl. Conf. on Functional Programming}, pp.412--423
+Pavlinovi, Z., King, T. and Wies, T. (2015) 'Practical SMT-Based Type Error Localization', {\it Proceedings of the International Conference on Functional Programming}, pp.412--423
 
 \bibitem[\protect\citeauthoryear{Sebastiani and Trentin}{2015}]{Patrick2015}
-Sebastiani, R. and Trentin, P. (2015) 'OptiMathSAT: A Tool for Optimization Modulo Theories', {\it Proc. of the Intl. Conf. on Computer Aided Verification}, Vol. 9206, pp.447--454
+Sebastiani, R. and Trentin, P. (2015) 'OptiMathSAT: A Tool for Optimization Modulo Theories', {\it Proceedings of the International Conference on Computer Aided Verification}, Vol. 9206, pp.447--454
 
 \bibitem[\protect\citeauthoryear{Holzmann \textit{et al.}}{2011}]{Holzmann11}
 Holzmann, G., Joshi, R. and Groce, A. (2011) 'Swarm Verification Techniques', {\it IEEE Transactions Software Engineering}, Vol. 9206, pp.845--857
 
 \bibitem[\protect\citeauthoryear{Holzmann}{2012}]{Holzmann2012}
-Holzmann, G. (2012) 'Parallelizing the spin model checker', {\it Proc. of the Intl. Symp. on Model Checking Software}, Vol. 7385, pp.155--171
+Holzmann, G. (2012) 'Parallelizing the spin model checker', {\it Proceedings of the International Symposium on Model Checking Software}, Vol. 7385, pp.155--171
 
 \end{thebibliography}
 
